--- a/composer.json
+++ b/composer.json
@@ -13,23 +13,18 @@
   ],
   "require": {
     "php": "^7.0.0",
-    "symfony/console": "^4.0",
-    "symfony/config": "^4.0",
-    "symfony/framework-bundle": "^4.0",
-    "symfony/http-foundation": "^4.0",
-    "symfony/http-kernel": "^4.0"
+    "symfony/config": "^3.4",
+    "symfony/console": "^3.4",
+    "symfony/framework-bundle": "^3.4",
+    "symfony/http-foundation": "^3.4",
+    "symfony/http-kernel": "^3.4",
+    "symfony/lock": "^3.4"
   },
   "require-dev": {
-    "doctrine/data-fixtures": "^1.3",
-    "doctrine/doctrine-fixtures-bundle": "^3.0",
     "psr/log": "~1.0",
-    "symfony/browser-kit": "^4.0",
-    "symfony/css-selector": "^4.0",
-    "symfony/dom-crawler": "^4.0",
-    "symfony/finder": "^4.0",
-    "symfony/phpunit-bridge": "^4.0",
-    "symfony/var-dumper": "^4.0",
-    "symfony/yaml": "^4.0"
+    "symfony/phpunit-bridge": "^3.4",
+    "symfony/var-dumper": "^3.4",
+    "symfony/yaml": "^3.4"
   },
   "config": {
     "sort-packages": true
