--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,7 +1,8 @@
 services:
     simonetti.bundle.ping.lock_store:
-        class: Symfony\Component\Lock\Store\SemaphoreStore
+        class: Symfony\Component\Lock\Store\RedisStore
         public: false
+        arguments: ["@simonetti.bundle.ping.redis"]
     simonetti.bundle.ping.lock_factory:
         class: Symfony\Component\Lock\Factory
         arguments: ["@simonetti.bundle.ping.lock_store"]
@@ -11,5 +12,5 @@ services:
         factory: ['@simonetti.bundle.ping.lock_factory', factory]
         arguments: [""]
     simonetti.bundle.ping.controller.ping_action:
-        class: Simonetti\Bundle\PingBundle\Controller\PingAction
+        class: Simonetti\PingBundle\Controller\PingAction
         arguments: ["@simonetti.bundle.ping.lock"]
