--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -1,3 +1,3 @@
 ping_path:
     path: /
-    controller: Simonetti\PingBundle\Controller/PingAction.php
+    controller: simonetti.bundle.ping.controller.ping_action
