--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -14,6 +14,7 @@ services:
     simonetti.bundle.ping.controller.ping_action:
         class: Simonetti\PingBundle\Controller\PingAction
         arguments: ["@simonetti.bundle.ping.lock"]
+        public: true
     pimonetti.pingbundle.command.lock_command:
         class: Simonetti\PingBundle\Command\LockCommand
         arguments: ['@simonetti.bundle.ping.lock']
