--- a/composer.json
+++ b/composer.json
@@ -14,12 +14,12 @@
   ],
   "require": {
     "php": "^7.0.0|^8",
-    "symfony/config": "^3|^4",
-    "symfony/console": "^3|^4",
-    "symfony/framework-bundle": "^3|^4",
-    "symfony/http-foundation": "^3|^4",
-    "symfony/http-kernel": "^3|^4",
-    "symfony/lock": "^3|^4"
+    "symfony/config": "^3|^4|^5",
+    "symfony/console": "^3|^4|^5",
+    "symfony/framework-bundle": "^3|^4|^5",
+    "symfony/http-foundation": "^3|^4|^5",
+    "symfony/http-kernel": "^3|^4|^5",
+    "symfony/lock": "^3|^4|^5"
   },
   "require-dev": {
     "psr/log": "~1.0",
