--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,13 @@
     }
   ],
   "require": {
-    "php": "^7.4|^8",
-    "symfony/config": "^3.4|^4|^5|^6",
-    "symfony/console": "^3.4|^4|^5|^6",
-    "symfony/framework-bundle": "^3.4|^4|^5|^6",
-    "symfony/http-foundation": "^3.4|^4|^5|^6",
-    "symfony/http-kernel": "^3.4|^4|^5|^6",
-    "symfony/lock": "^3.4|^4|^5|^6"
+    "php": "^8.1",
+    "symfony/config": "^6|^7",
+    "symfony/console": "^6|^7",
+    "symfony/framework-bundle": "^6|^7",
+    "symfony/http-foundation": "^6|^7",
+    "symfony/http-kernel": "^6|^7",
+    "symfony/lock": "^6|^7"
   },
   "require-dev": {
     "psr/log": "~1.0",
