--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -6,17 +6,12 @@ on:
 
 jobs:
   run:
-    runs-on: 'ubuntu-latest'
+    runs-on: "ubuntu-latest"
     strategy:
       matrix:
-        symfony-version: ['^3.4', '^4', '^5', '^6']
-        php-version: ['7.4', '8.0', '8.1']
+        symfony-version: ["^6", "^7"]
+        php-version: ["8.1", "8.2"]
         prefer: [lowest, stable]
-        exclude:
-          - symfony-version: '^6'
-            php-version: '7.4'
-          - symfony-version: '^3.4'
-            php-version: '8.1'
 
     steps:
       - name: Setup PHP
