--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,6 +12,9 @@ jobs:
         symfony-version: ["^6", "^7"]
         php-version: ["8.1", "8.2"]
         prefer: [lowest, stable]
+        exclude:
+          - symfony-version: "^7"
+            php-version: "8.1"
 
     steps:
       - name: Setup PHP
